se sube cambios de pagina de productos con cards realizadas dinamicamente y guarde de informacion en el localStorage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototipo Proyecto Final </title>
+    <title>Proyecto Final </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Css Conex-->
     <link rel="stylesheet" href="style.css">
@@ -14,21 +14,26 @@
 
     <!--Header:-->
     <header>
+
         <div id="menu-bar" class="fas fa-bars"></div>
         <a href="#" class="veci-Logo">VeciMarket</a>
+
         <!--Navegacion-->
         <nav class="navbar">
-            <a href="#">Inicio</a>
-            <a href="#">Productos</a>
+            <a href="./index.html">Inicio</a>
+            <a href="./page/productos.html">Productos</a>
             <a href="#">Ofertas</a>
             <a href="#">Xdefinir</a>
         </nav>
+
         <!--Iconos de referencia para el usuario-->
         <div class="icons">
             <a href="#" class="fas fa-shopping-cart"></a>
             <a href="#" class="fas fa-user"></a>
         </div>
     </header>
+
+
     <!-- 1.Contenido "Principal" - Primer Slider con botones-->
     <section class="contenedor-home">
         <div class="slider active">
@@ -45,6 +50,7 @@
                 </div>
             </div>
         </div>
+
         <!-- 1.1 Contenido "Principal" - Segundo Slider con botones-->
         <div class="slider">
             <div class="slide">
@@ -60,120 +66,41 @@
                 </div>
             </div>
         </div>
-        </div>
+
+
         <!--1.2 Contenido "Principal" - Slider der/izq-->
         <div id="prev" class="fas fa-chevron-left" onclick="prev()"></div>
         <div id="next" class="fas fa-chevron-right" onclick="next()"></div>
     </section>
 
-    <!-- 2.Tarjetas/cards de productos-->
-    <section class="products" id="products">
-        <h1 class="titulo">Productos<span> para ti </span> </h1>
-        <div class="box-container">
-            <!--Card 1-->
-            <div class="box">
-                <img src="image/p-1.png" alt="">
-                <div class="content">
-                    <h3>Leche Parmalat</h3>
-                    <div class="precio">$2000</div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="box">
-                <img src="image/p-2.png" alt="">
-                <<div class="content">
-                    <h3>Nutella</h3>
-                    <div class="precio">$ 14.000</div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <a href="#" class="btn">Comprar</a>
-            </div>
-        </div>
-        <!--Card 3-->
-        <div class="box">
-            <img src="image/p-3.png" alt="">
-            <div class="content">
-                <h3>Pan Tajado</h3>
-                <div class="precio">$5000</div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <a href="#" class="btn">comprar</a>
-            </div>
-        </div>
-        <!--Card 4-->
-        <div class="box">
-            <img src="image/p-1.png" alt="">
-            <div class="content">
-                <h3>Leche Parmalat</h3>
-                <div class="precio">$2000</div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-        </div>
-        <!--Card 5-->
-        <div class="box">
-            <img src="image/p-1.png" alt="">
-            <div class="content">
-                <h3>Leche Parmalat</h3>
-                <div class="precio">$2000</div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-        </div>
-        <!--Card 6-->
-        <div class="box">
-            <img src="image/p-1.png" alt="">
-            <div class="content">
-                <h3>Leche Parmalat</h3>
-                <div class="precio">$2000</div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-        </div>
-        </div>
-    </section>
+
+
+
     <!-- 3.POR DEFINIR: promociones -->
     <section class="promocion" id="promocion">
-        <h1 class="titulo"> <span>Pro</span>mociones</h1>
-        Aqui se refiere la informacion de PROMOCIONES - OFERTAS
-        <div class="row"></div>
+        <h1 class="titulo"> <span>Co</span>cina</h1>
+        <div class="row">
+
+        </div>
     </section>
+
+
+    <!-- 3.POR DEFINIR: promociones -->
+    <section class="promocion" id="promocion">
+        <h1 class="titulo"> <span>Sa</span>lud</h1>
+        <div class="row">
+
+        </div>
+    </section>
+
+    <!-- 3.POR DEFINIR: promociones -->
+    <section class="promocion" id="promocion">
+        <h1 class="titulo"> <span>Higi</span>ene</h1>
+        <div class="row">
+
+        </div>
+    </section>
+
 
     <!-- 4.POR DEFINIR: Opiniones de usuario -->
     <section class="opinion" id="opinion">
@@ -181,6 +108,7 @@
         <div class="box-container">
         </div>
     </section>
+
     <!--5.Aqui se encuentra el Formulacion-->
     <form></form>
 
@@ -191,7 +119,8 @@
         </div>
 
         <!-- Js Conex -->
-        <!--<script src="main.js"></script>-->
-
+        <!--<script src="./scripts/script.js" type="module"></script-->
+    </section>
 </body>
+
 </html>
