se suben mejoras en pagina index y se crea pagina ofertas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <a href="./index.html">Inicio</a>
             <a href="./page/productos.html">Productos</a>
-            <a href="#">Ofertas</a>
+            <a href="./page/ofertas.html">Ofertas</a>
             <a href="#">Xdefinir</a>
         </nav>
 
@@ -76,30 +76,39 @@
 
 
 
-    <!-- 3.POR DEFINIR: promociones -->
-    <section class="promocion" id="promocion">
+    <!-- 3.Cocina-->
+    <section class="promocion">
         <h1 class="titulo"> <span>Co</span>cina</h1>
-        <div class="row">
+        <div class="row" id="cocina">
 
         </div>
     </section>
 
+     <!-- 3.Cocina-->
+     <section class="promocion">
+        <h1 class="titulo"> <span>Sna</span>cks</h1>
+        <div class="row" id="snacks">
 
-    <!-- 3.POR DEFINIR: promociones -->
-    <section class="promocion" id="promocion">
+        </div>
+    </section>
+
+     <!-- 3.Cocina-->
+     <section class="promocion">
         <h1 class="titulo"> <span>Sa</span>lud</h1>
-        <div class="row">
+        <div class="row" id="salud">
 
         </div>
     </section>
 
-    <!-- 3.POR DEFINIR: promociones -->
-    <section class="promocion" id="promocion">
-        <h1 class="titulo"> <span>Higi</span>ene</h1>
-        <div class="row">
+     <!-- 3.Cocina-->
+     <section class="promocion">
+        <h1 class="titulo"> <span>Hig</span>iene</h1>
+        <div class="row" id="higiene">
 
         </div>
     </section>
+
+
 
 
     <!-- 4.POR DEFINIR: Opiniones de usuario -->
@@ -119,7 +128,7 @@
         </div>
 
         <!-- Js Conex -->
-        <!--<script src="./scripts/script.js" type="module"></script-->
+        <script src="./scripts/cards.js" type="module"></script>
     </section>
 </body>
 
