Contador de carrito- Menu dinamico Rs hamburger-Form-prototipo carrito

--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
         </div>
     </section>
 
+    <!--Paso 6:-->
+    
    
 
-    <!--Paso 6 :footer-->
+    <!--Paso 7 :footer-->
 
 <section class="footer">
     <div class="box-container">
