Entrega de Proyecto-Final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Concert+One&family=Great+Vibes&family=Quintessential&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Concert+One&family=Great+Vibes&family=Quintessential&display=swap"
+        rel="stylesheet">
     <!-- Css Conex-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +31,6 @@
             <a href="./index.html">Inicio</a>
             <a href="./page/productos.html">Productos</a>
             <a href="./page/ofertas.html">Ofertas</a>
-            <a href="#cocina">Catalogo</a>
         </nav>
 
         <!--Iconos de referencia para el usuario-->
@@ -94,12 +95,12 @@
             <h1 class="titulo">Regis<span>tro</span> </h1>
             <div class="box-container">
 
-                
-<form action="" class="formulario1">
-<br>
+
+                <form action="" class="formulario1">
+                    <br>
                     <input type="text" class="formulario1-1" placeholder="Nombre completo" requerid>
                     <input type="email" class="formulario1-1" placeholder="@Correo.gmail" requerid>
-                    <a href="" onclick="alert('Se ha enviado un correo de confirmacion');"class="btn">Contactame</a>
+                    <a href="" onclick="alert('Se ha enviado un correo de confirmacion');" class="btn">Contactame</a>
 
 
                 </form>
@@ -109,11 +110,11 @@
         <!--Paso 6:-->
         <section class="publicidad">
             <div class="box-container">
-        <div class="textos">
-        <p style="font-size:3rem; color:white; text-align: center;">Disfruta de nuestras promociones </p>
-        <h3 class="intro" style="font-size:8rem; color:white; text-align: center;">VeciMarket</h3>
+                <div class="textos">
+                    <p style="font-size:3rem; color:white; text-align: center;">Disfruta de nuestras promociones </p>
+                    <h3 class="intro" style="font-size:8rem; color:white; text-align: center;">VeciMarket</h3>
 
-</div>
+                </div>
             </div>
         </section>
         <!--Paso 7 :footer-->
@@ -128,25 +129,23 @@
 
                 <div class="box">
                     <h3>Menu links</h3>
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="productos.html">Productos</a>
                     <a href="ofertas.html">Ofertas</a>
-                    <a href="#">Catalogo</a>
-                    <a href="#">Registro</a>
+                    <a href="#opinion">Registro</a>
                 </div>
 
                 <div class="box">
                     <h3>Team 10</h3>
                     <a href="#">Andreina Rodriguez</a>
                     <a href="#">Alcelis Del Valle Rosas</a>
-                    <a href="#">Gabriel Mancilla</a>
                 </div>
 
                 <div class="box">
                     <h3>Contactanos</h3>
-                    <a href="#">twitter</a>
-                    <a href="#">instagram</a>
-                    <a href="#">linkedin</a>
+                    <a href="https://twitter.com/">twitter</a>
+                    <a href="https://www.instagram.com/">instagram</a>
+                    <a href="https://www.linkedin.com/">linkedin</a>
                 </div>
 
                 <div class="creado">Creado por: Team 10 - @AcademiaGeek</div>
